--- a/openApiDocs/beta/Teams.yml
+++ b/openApiDocs/beta/Teams.yml
@@ -4466,7 +4466,7 @@ paths:
       tags:
         - chats.Functions
       summary: Invoke function delta
-      operationId: chat.message.reply_deltum
+      operationId: chat.message.reply_delta
       parameters:
         - name: chat-id
           in: path
@@ -4639,7 +4639,7 @@ paths:
       tags:
         - chats.Functions
       summary: Invoke function delta
-      operationId: chat.message_deltum
+      operationId: chat.message_delta
       parameters:
         - name: chat-id
           in: path
@@ -5848,7 +5848,7 @@ paths:
       tags:
         - chats.Functions
       summary: Invoke function delta
-      operationId: chat.permissionGrant_deltum
+      operationId: chat.permissionGrant_delta
       parameters:
         - name: chat-id
           in: path
@@ -23917,7 +23917,7 @@ paths:
       tags:
         - teams.Functions
       summary: Invoke function delta
-      operationId: team.channel.message.reply_deltum
+      operationId: team.channel.message.reply_delta
       parameters:
         - name: team-id
           in: path
@@ -24106,7 +24106,7 @@ paths:
       tags:
         - teams.Functions
       summary: Invoke function delta
-      operationId: team.channel.message_deltum
+      operationId: team.channel.message_delta
       parameters:
         - name: team-id
           in: path
@@ -28707,7 +28707,7 @@ paths:
       tags:
         - teams.Functions
       summary: Invoke function delta
-      operationId: team.permissionGrant_deltum
+      operationId: team.permissionGrant_delta
       parameters:
         - name: team-id
           in: path
@@ -31668,7 +31668,7 @@ paths:
       tags:
         - teams.Functions
       summary: Invoke function delta
-      operationId: team.primaryChannel.message.reply_deltum
+      operationId: team.primaryChannel.message.reply_delta
       parameters:
         - name: team-id
           in: path
@@ -31841,7 +31841,7 @@ paths:
       tags:
         - teams.Functions
       summary: Invoke function delta
-      operationId: team.primaryChannel.message_deltum
+      operationId: team.primaryChannel.message_delta
       parameters:
         - name: team-id
           in: path
@@ -40600,7 +40600,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.deletedTeam.channel.message.reply_deltum
+      operationId: teamwork.deletedTeam.channel.message.reply_delta
       parameters:
         - name: deletedTeam-id
           in: path
@@ -40789,7 +40789,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.deletedTeam.channel.message_deltum
+      operationId: teamwork.deletedTeam.channel.message_delta
       parameters:
         - name: deletedTeam-id
           in: path
@@ -48005,7 +48005,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.teamTemplate.definition.teamDefinition.channel.message.reply_deltum
+      operationId: teamwork.teamTemplate.definition.teamDefinition.channel.message.reply_delta
       parameters:
         - name: teamTemplate-id
           in: path
@@ -48210,7 +48210,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.teamTemplate.definition.teamDefinition.channel.message_deltum
+      operationId: teamwork.teamTemplate.definition.teamDefinition.channel.message_delta
       parameters:
         - name: teamTemplate-id
           in: path
@@ -53379,7 +53379,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.teamTemplate.definition.teamDefinition.permissionGrant_deltum
+      operationId: teamwork.teamTemplate.definition.teamDefinition.permissionGrant_delta
       parameters:
         - name: teamTemplate-id
           in: path
@@ -56796,7 +56796,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.teamTemplate.definition.teamDefinition.primaryChannel.message.reply_deltum
+      operationId: teamwork.teamTemplate.definition.teamDefinition.primaryChannel.message.reply_delta
       parameters:
         - name: teamTemplate-id
           in: path
@@ -56985,7 +56985,7 @@ paths:
       tags:
         - teamwork.Functions
       summary: Invoke function delta
-      operationId: teamwork.teamTemplate.definition.teamDefinition.primaryChannel.message_deltum
+      operationId: teamwork.teamTemplate.definition.teamDefinition.primaryChannel.message_delta
       parameters:
         - name: teamTemplate-id
           in: path
