--- a/openApiDocs/v1.0/Files.yml
+++ b/openApiDocs/v1.0/Files.yml
@@ -5216,7 +5216,7 @@ paths:
       tags:
         - drives.Functions
       summary: Invoke function delta
-      operationId: drive.item_deltum
+      operationId: drive.item_delta
       parameters:
         - name: drive-id
           in: path
@@ -5405,7 +5405,7 @@ paths:
       tags:
         - drives.Functions
       summary: Invoke function delta
-      operationId: drive.item_deltum
+      operationId: drive.item_delta
       parameters:
         - name: drive-id
           in: path
@@ -17171,7 +17171,7 @@ paths:
       tags:
         - drives.Functions
       summary: Invoke function delta
-      operationId: drive.root_deltum
+      operationId: drive.root_delta
       parameters:
         - name: drive-id
           in: path
@@ -17352,7 +17352,7 @@ paths:
       tags:
         - drives.Functions
       summary: Invoke function delta
-      operationId: drive.root_deltum
+      operationId: drive.root_delta
       parameters:
         - name: drive-id
           in: path
