--- a/openApiDocs/v1.0/Groups.yml
+++ b/openApiDocs/v1.0/Groups.yml
@@ -1495,7 +1495,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendar.calendarView.instance_deltum
+      operationId: group.calendar.calendarView.instance_delta
       parameters:
         - name: group-id
           in: path
@@ -2033,7 +2033,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendar.calendarView_deltum
+      operationId: group.calendar.calendarView_delta
       parameters:
         - name: group-id
           in: path
@@ -2725,7 +2725,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendar.event.instance_deltum
+      operationId: group.calendar.event.instance_delta
       parameters:
         - name: group-id
           in: path
@@ -3263,7 +3263,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendar.event_deltum
+      operationId: group.calendar.event_delta
       parameters:
         - name: group-id
           in: path
@@ -4072,7 +4072,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendarView.instance_deltum
+      operationId: group.calendarView.instance_delta
       parameters:
         - name: group-id
           in: path
@@ -4610,7 +4610,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.calendarView_deltum
+      operationId: group.calendarView_delta
       parameters:
         - name: group-id
           in: path
@@ -9938,7 +9938,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.drive.item_deltum
+      operationId: group.drive.item_delta
       parameters:
         - name: group-id
           in: path
@@ -10135,7 +10135,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.drive.item_deltum
+      operationId: group.drive.item_delta
       parameters:
         - name: group-id
           in: path
@@ -13265,7 +13265,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.drive.root_deltum
+      operationId: group.drive.root_delta
       parameters:
         - name: group-id
           in: path
@@ -13454,7 +13454,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.drive.root_deltum
+      operationId: group.drive.root_delta
       parameters:
         - name: group-id
           in: path
@@ -15036,7 +15036,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.event.instance_deltum
+      operationId: group.event.instance_delta
       parameters:
         - name: group-id
           in: path
@@ -15574,7 +15574,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: group.event_deltum
+      operationId: group.event_delta
       parameters:
         - name: group-id
           in: path
@@ -23452,7 +23452,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.permissionGrant_deltum
+      operationId: group.permissionGrant_delta
       parameters:
         - name: group-id
           in: path
@@ -28550,7 +28550,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.team.channel.message.reply_deltum
+      operationId: group.team.channel.message.reply_delta
       parameters:
         - name: group-id
           in: path
@@ -28706,7 +28706,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.team.channel.message_deltum
+      operationId: group.team.channel.message_delta
       parameters:
         - name: group-id
           in: path
@@ -29626,7 +29626,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.team.primaryChannel.message.reply_deltum
+      operationId: group.team.primaryChannel.message.reply_delta
       parameters:
         - name: group-id
           in: path
@@ -29774,7 +29774,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group.team.primaryChannel.message_deltum
+      operationId: group.team.primaryChannel.message_delta
       parameters:
         - name: group-id
           in: path
@@ -35599,7 +35599,7 @@ paths:
       tags:
         - groups.Functions
       summary: Invoke function delta
-      operationId: group_deltum
+      operationId: group_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
