--- a/openApiDocs/v1.0/Identity.DirectoryManagement.yml
+++ b/openApiDocs/v1.0/Identity.DirectoryManagement.yml
@@ -2226,7 +2226,7 @@ paths:
       tags:
         - contacts.Functions
       summary: Invoke function delta
-      operationId: contact_deltum
+      operationId: contact_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -2957,7 +2957,7 @@ paths:
       tags:
         - contracts.Functions
       summary: Invoke function delta
-      operationId: contract_deltum
+      operationId: contract_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -6971,7 +6971,7 @@ paths:
       tags:
         - devices.Functions
       summary: Invoke function delta
-      operationId: device_deltum
+      operationId: device_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -9373,7 +9373,7 @@ paths:
       tags:
         - directory.Functions
       summary: Invoke function delta
-      operationId: directory.administrativeUnit_deltum
+      operationId: directory.administrativeUnit_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -10128,7 +10128,7 @@ paths:
       tags:
         - directory.Functions
       summary: Invoke function delta
-      operationId: directory.deletedItem_deltum
+      operationId: directory.deletedItem_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -12985,7 +12985,7 @@ paths:
       tags:
         - directoryRoles.Functions
       summary: Invoke function delta
-      operationId: directoryRole_deltum
+      operationId: directoryRole_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -13672,7 +13672,7 @@ paths:
       tags:
         - directoryRoleTemplates.Functions
       summary: Invoke function delta
-      operationId: directoryRoleTemplate_deltum
+      operationId: directoryRoleTemplate_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
