--- a/openApiDocs/v1.0/Identity.SignIns.yml
+++ b/openApiDocs/v1.0/Identity.SignIns.yml
@@ -8582,7 +8582,7 @@ paths:
       tags:
         - oauth2PermissionGrants.Functions
       summary: Invoke function delta
-      operationId: oauth2PermissionGrant_deltum
+      operationId: oauth2PermissionGrant_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -12131,7 +12131,7 @@ paths:
       tags:
         - policies.Functions
       summary: Invoke function delta
-      operationId: policy.featureRolloutPolicy.appliesTo_deltum
+      operationId: policy.featureRolloutPolicy.appliesTo_delta
       parameters:
         - name: featureRolloutPolicy-id
           in: path
