--- a/openApiDocs/beta/Applications.yml
+++ b/openApiDocs/beta/Applications.yml
@@ -5896,7 +5896,7 @@ paths:
       tags:
         - applications.Functions
       summary: Invoke function delta
-      operationId: application_deltum
+      operationId: application_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -20321,7 +20321,7 @@ paths:
       tags:
         - servicePrincipals.Functions
       summary: Invoke function delta
-      operationId: servicePrincipal_deltum
+      operationId: servicePrincipal_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
