--- a/openApiDocs/v1.0/Education.yml
+++ b/openApiDocs/v1.0/Education.yml
@@ -617,7 +617,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.class.assignmentCategory_deltum
+      operationId: education.class.assignmentCategory_delta
       parameters:
         - name: educationClass-id
           in: path
@@ -1436,7 +1436,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.class.assignment.category_deltum
+      operationId: education.class.assignment.category_delta
       parameters:
         - name: educationClass-id
           in: path
@@ -3872,7 +3872,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.class.assignment_deltum
+      operationId: education.class.assignment_delta
       parameters:
         - name: educationClass-id
           in: path
@@ -5253,7 +5253,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.class_deltum
+      operationId: education.class_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -6019,7 +6019,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.me.assignment.category_deltum
+      operationId: education.me.assignment.category_delta
       parameters:
         - name: educationAssignment-id
           in: path
@@ -8087,7 +8087,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.me.assignment_deltum
+      operationId: education.me.assignment_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -10384,7 +10384,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.school_deltum
+      operationId: education.school_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -11464,7 +11464,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.user.assignment.category_deltum
+      operationId: education.user.assignment.category_delta
       parameters:
         - name: educationUser-id
           in: path
@@ -13900,7 +13900,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.user.assignment_deltum
+      operationId: education.user.assignment_delta
       parameters:
         - name: educationUser-id
           in: path
@@ -15339,7 +15339,7 @@ paths:
       tags:
         - education.Functions
       summary: Invoke function delta
-      operationId: education.user_deltum
+      operationId: education.user_delta
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
